--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="script" href="main.js" />
     <title>Companion</title>
 </head>
 <body>
 <!--Navigation Bar-->
+    <nav>
+        <a href="./index.html">Home</a>
+        <a href="./companions.html">Companions</a>
+        <a href="./messages.html">Messages</a>
+    </nav>
+<!--Project Description-->
 
-<!--Images-->
+<!--Sample Images-->
 
-<!--Statements-->
+<!--Sample Text Area and Messages-->
 </body>
