Add navigation bar

--- a/messages.html
+++ b/messages.html
@@ -1,5 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="script" href="main.js" />
+    <title>Companion</title>
+</head>
+<body>
+<!--Navigation Bar-->
+    <nav>
+        <a href="./index.html">Home</a>
+        <a href="./companions.html">Companions</a>
+        <a href="./messages.html">Messages</a>
+    </nav>
+    
 <!--Images-->
 
-<!--Statements-->
+<!--Text-->
 
-<!--Text Input Area-->
+</body>
