--- a/companions.html
+++ b/companions.html
@@ -9,9 +9,14 @@
 </head>
 <body>
 <!--Navigation Bar-->
-    <nav>
-        <a href="./index.html">Home</a>
-        <a href="./companions.html">Companions</a>
-        <a href="./messages.html">Messages</a>
-    </nav>
+    <header>
+        <img src="./images/lorem_ipsum.png" />
+        <nav>
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./companions.html">Companions</a></li>
+                <li><a href="./messages.html">Messages</a></li>
+            </ul>
+        </nav>
+    </header>
 <!--Companions List-->
