--- a/messages.html
+++ b/messages.html
@@ -9,12 +9,16 @@
 </head>
 <body>
 <!--Navigation Bar-->
+<header>
+    <img src="./images/lorem_ipsum.png" />
     <nav>
-        <a href="./index.html">Home</a>
-        <a href="./companions.html">Companions</a>
-        <a href="./messages.html">Messages</a>
+        <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./companions.html">Companions</a></li>
+            <li><a href="./messages.html">Messages</a></li>
+        </ul>
     </nav>
-    
+</header>       
 <!--Images-->
 
 <!--Text-->
