--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <img src="./images/lorem_ipsum.png" />
         <nav>
             <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./companions.html">Companions</a></li>
-                <li><a href="./messages.html">Messages</a></li>
+                <li><a href="./index.html" class="button">Home</a></li>
+                <li><a href="./companions.html" class="button">Companions</a></li>
+                <li><a href="./messages.html" class="button">Messages</a></li>
             </ul>
         </nav>
     </header>
