Add icons on Nav-Bar

--- a/messages.html
+++ b/messages.html
@@ -13,9 +13,9 @@
     <img src="./images/lorem_ipsum.png" />
     <nav>
         <ul>
-            <li><a href="./index.html" class="button">Home</a></li>
+            <li><a href="./index.html" class="button"><img src="./images/home.png" class="token" /> Home</a></li>
             <li><a href="./companions.html" class="button">Companions</a></li>
-            <li><a href="./messages.html" class="button">Messages</a></li>
+            <li><a href="./messages.html" class="button"><img src="./images/message.png" class="token"/> Messages</a></li>
         </ul>
     </nav>
 </header>       
