Add project description on home page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
         </nav>
     </header>
 <!--Project Description-->
-
+<div class="project">
+    <h1>Project Description</h1>
+    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer quis molestie sem, mollis sodales risus. 
+    Nunc eget ipsum faucibus, semper nulla sed, varius massa. In tristique nisl sed ligula interdum volutpat. 
+    Curabitur imperdiet ex eu elit vulputate, in mollis nunc dictum. Aliquam eget ultrices diam. Mauris accumsan euismod libero a tristique.</p>
+    <img src="./images/lorem_ipsum.png" class="d-image" />
+</div>
 <!--Sample Images-->
 
 <!--Sample Text Area and Messages-->
